--- a/src/main/resources/mainWindow.fxml
+++ b/src/main/resources/mainWindow.fxml
@@ -98,5 +98,23 @@
             </VBox>
          </children>
       </HBox>
+      <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="160.0">
+         <children>
+            <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
+               <children>
+                  <TextField fx:id="txtCarIdForKm" promptText="Enter Car ID" />
+                  <TextField fx:id="txtCarTotalKm" layoutX="10.0" layoutY="10.0" />
+                  <Button fx:id="btnCalcKm" onAction="#btnCalculateKmClick" text="Calculate Km" />
+               </children>
+            </VBox>
+            <VBox alignment="CENTER" layoutX="10.0" layoutY="10.0" prefHeight="200.0" prefWidth="100.0">
+               <children>
+                  <TextField fx:id="txtCarIdForIncome" promptText="Enter Car ID" />
+                  <TextField fx:id="txtCarTotalIncome" layoutX="10.0" layoutY="10.0" />
+                  <Button fx:id="btnCalcIncome" onAction="#btnCalculateIncomeClick" text="Calc. Income" />
+               </children>
+            </VBox>
+         </children>
+      </HBox>
    </children>
 </VBox>
